Fixed logo alignment

--- a/_assets/stylesheets/motto.css.sass
+++ b/_assets/stylesheets/motto.css.sass
@@ -5,6 +5,8 @@
   &__logo
     max-width: 95%
     +margin-trailer(1)
+    img, source
+      max-width: 100%
   &__main
     +adjust-font-size-to($base-font-size * 3)
     color: $color-secondary
